# snowballgr-api

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini  run.py  setup.py
src/app/: app.py  config.py  db_utils.py  services.py  status.py  utils.py
src/app/resources/: admin.py  consentform.py  invite.py  participant.py  seed.py
tests/integration/: conftest.py  prepare_test_data.py  test_admin.py  test_crm.py  test_participants.py  test_seeds.py
tests/test-data/: addseed.json  seeds.csv  seeds.json  seeds_10.csv  sig
